--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -43,11 +43,11 @@ ribbon:
 feign:
   hystrix:
     enabled: true
-  # client:
-  #     config:
-  #         default:
-  #             connectTimeout: 5000
-  #             readTimeout: 5000
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
 
 # See https://github.com/Netflix/Hystrix/wiki/Configuration
 hystrix:
@@ -57,8 +57,8 @@ hystrix:
         isolation:
           strategy: SEMAPHORE
           # See https://github.com/spring-cloud/spring-cloud-netflix/issues/1330
-          # thread:
-          #     timeoutInMilliseconds: 10000
+          thread:
+            timeoutInMilliseconds: 10000
   shareSecurityContext: true
 
 management:
